tweak some layout issues and color scheme

--- a/app/(home-components)/home.module.scss
+++ b/app/(home-components)/home.module.scss
@@ -92,7 +92,7 @@
     align-items: center;
     flex-direction: column;
     border-top: 1px solid rgba(255, 255, 255, 0.384);
-    padding-top: 1em;
+    padding: 2em 0;
     background-color: rgb(31, 30, 30);
     color: white;
 
