--- a/app/contacto/contacto.module.scss
+++ b/app/contacto/contacto.module.scss
@@ -1,5 +1,4 @@
 .contactoContainer {
-    color: rgb(98, 121, 255);
 
     .hero {
         position: relative;
