--- a/app/somos/[description]/description.module.scss
+++ b/app/somos/[description]/description.module.scss
@@ -4,5 +4,15 @@
     .item {
         padding: 1em 0;
         letter-spacing: 1px;
+        border-bottom: 1px solid rgba(123, 123, 255, 0.5);
+
+        h4 {
+            color: rgb(63, 192, 252);
+        }
+
+        p {
+            padding-left: 10px;
+        }
+
     }
 }
