--- a/app/somos/somos.module.scss
+++ b/app/somos/somos.module.scss
@@ -1,4 +1,6 @@
 .somosContainer {
+    min-height: 80vh;
+
     .main {
         max-width: 1200px;
         margin: 2em auto;
